examples/test/testpolicy8429.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8429
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key40: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value48
          key41: value3
          key38: value24
      podSelector:
        matchLabels:
          key14: value12
          key36: value20
          key29: value33
